# gupiao-workflaw

./: .gitignore  .mcp.json  README.md  pyproject.toml  server.py  选股workflow_PRD.md
docs/: API数据源质量文档.md  股票数据源MCP建设方案.md  选股Workflow_Agent建设改进方向.md  选股workflow_PRD.md
mcp_server/: __init__.py  __main__.py  config.py  schemas.py  server.py  symbol.py
mcp_server/providers/: __init__.py  akshare_provider.py  baostock_provider.py  base.py  eastmoney_provider.py  efinance_provider.py  sina_provider.py  tencent_provider.py  tushare_provider.py
mcp_server/services/: __init__.py  cache.py  quality_checker.py  rate_limiter.py  router.py  stock_data.py
scripts/: test_api_connections.py
web/: app.js  index.html  styles.css
